# opengl-test

./: .gitattributes  CMakeLists.txt  main.c
assets/shaders/: default.frag  default.vert
include/: camera.h  mat4.h
include/glad/: glad.h
include/math/: mat4.h  my_math.h  vec3.h
include/renderer/: mesh.h  shaders.h
src/: camera.c  glad.c  main.c  shaders.c
src/math/: mat4.c  vec3.c
src/renderer/: mesh.c  shaders.c
